--- a/index.html
+++ b/index.html
@@ -55,29 +55,29 @@
                             <img src="assets/img/vegetariant.jpg">
                             <p>Vegetariant</p>
                         </div>
-                        <p class="txt-contents">Vegetariant taste untuk yang ingin sehat bersama sayuran segar nan lezat</p>
+                        <p class="makanan-contents">Vegetariant taste untuk yang ingin sehat bersama sayuran segar nan lezat</p>
                     </div>
                     <div class="makanan">
                         <div class="makanan-icon">
                             <img src="assets/img/beef.jpg">
                             <p>Beef</p>
                         </div>
-                        <p class="txt-contents">Beef / daging sapi panggang dengan pengolahan spesial
-                            dan cita rasa alami tak terkalahkan</p>
+                        <p class="makanan-contents">Beef / daging sapi panggang dengan pengolahan
+                            spesial dan cita rasa alami tak terkalahkan</p>
                     </div>
                     <div class="makanan">
                         <div class="makanan-icon">
                             <img src="assets/img/coffe.jpg">
                             <p>Coffe</p>
                         </div>
-                        <p class="txt-contents">All variant coffe untuk anda pecinta kopi sejati. Hot atau Ice coffe lengkap</p>
+                        <p class="makanan-contents">All variant coffe untuk anda pecinta kopi sejati. Hot atau Ice coffe lengkap</p>
                     </div>
                     <div class="makanan">
                         <div class="makanan-icon">
                             <img src="assets/img/juice.jpg">
                             <p>Juice</p>
                         </div>
-                        <p class="txt-contents">Aneka minuman dingin segar. Buah pilihan yang fresh cocok untuk siang anda</p>
+                        <p class="makanan-contents">Aneka minuman dingin segar. Buah pilihan yang fresh cocok untuk siang anda</p>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -94,7 +94,7 @@
                             <img src="assets/img/teteng.png">
                             <p>Teteng</p>
                         </div>
-                        <p class="txt-contents">Peserta DTS OA Batch2 Progate Kelas J
+                        <p class="team-contents">Peserta DTS OA Batch2 Progate Kelas J
                             <br>0447977121-494<br>
                             Teteng</p>
                     </div>
@@ -103,7 +103,7 @@
                             <img src="assets/img/yusran.png">
                             <p>Yusran</p>
                         </div>
-                        <p class="txt-contents">Peserta DTS OA Batch2 Progate Kelas J
+                        <p class="team-contents">Peserta DTS OA Batch2 Progate Kelas J
                             <br>0447977011-48<br>
                             Teuku Yusransyah Tandi</p>
                     </div>
@@ -112,7 +112,7 @@
                             <img src="assets/img/wensi.png">
                             <p>Wensi</p>
                         </div>
-                        <p class="txt-contents">Peserta DTS OA Batch2 Progate Kelas J
+                        <p class="team-contents">Peserta DTS OA Batch2 Progate Kelas J
                             <br>0447977200-3<br>
                             Wensi Sekarsari</p>
                     </div>
@@ -121,7 +121,7 @@
                             <img src="assets/img/wendy.png">
                             <p>Wendy Mei</p>
                         </div>
-                        <p class="txt-contents">Peserta DTS OA Batch2 Progate Kelas J
+                        <p class="team-contents">Peserta DTS OA Batch2 Progate Kelas J
                             <br>0447977150-30<br>
                             Wendy Mei Ika Nur Ainni</p>
                     </div>
@@ -130,7 +130,7 @@
                             <img src="assets/img/wendy2.png">
                             <p>Wendy</p>
                         </div>
-                        <p class="txt-contents">Peserta DTS OA Batch2 Progate Kelas J
+                        <p class="team-contents">Peserta DTS OA Batch2 Progate Kelas J
                             <br>0447977061-29<br>
                             Wendy Wijaya</p>
                     </div>
